jenkins-kubernetes/modules/kubernetes/k8s-config/service.yaml
# Kubernetes NodePort service for the Jenkins server.
# Author: Andrew Jarombek
# Date: 6/14/2020

apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  labels:
    version: v1.0.0
    environment: production
    application: jenkins-server
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    application: jenkins-server

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp-service
  namespace: jenkins
  labels:
    version: v1.0.0
    environment: production
    application: jenkins-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    application: jenkins-server
