jenkins-kubernetes/modules/kubernetes/k8s-config/ingress.yaml
# Kubernetes ingress object for the Jenkins server's ALB ingress controller.
# Author: Andrew Jarombek
# Date: 6/14/2020

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: jenkins.jarombek.io,www.jenkins.jarombek.io
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: ${ACM_CERT_ARNS}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: '/login'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/security-groups: ${SECURITY_GROUPS_ID}
    alb.ingress.kubernetes.io/subnets: ${SUBNET_IDS}
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/tags: Name=jenkins-load-balancer,Application=jenkins,Environment=${ENV}
  labels:
    version: v1.0.0
    environment: production
    application: jenkins-server
spec:
  rules:
    - host: jenkins.jarombek.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: jenkins-service
              servicePort: 80
    - host: www.jenkins.jarombek.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: jenkins-service
              servicePort: 80
